web/app/themes/ppj/src/sass/components/video-player.sass
.video-player
  position: relative
  width: 100%

  &__title
    font-weight: $font-weight-bold

  &__video-container
    align-items: center
    background: $color-dark
    display: flex
    height: 0
    justify-content: center
    padding-bottom: 56.25%
    padding-bottom: 78%
    position: relative

    @include bp('portrait')
      padding-bottom: 68%

    @include bp('large')
      padding-bottom: 49.5rem

    & > iframe
      bottom: 0
      height: 100%
      left: 0
      right: 0
      position: absolute
      top: 0
      width: 100%

  &__cover-image
    height: 100%
    width: 100%

  &__play-button-container
    align-items: center
    bottom: 0
    display: flex
    left: 0
    justify-content: center
    position: absolute
    right: 0
    top: 0

  &__play-button
    cursor: pointer
    fill: $color-white
    position: absolute
    transition: $main-transition-duration
    width: 20%

    &:hover
      opacity: .85
      fill: $color-secondary

  &--wistia
    padding-bottom: 0
    position: relative

    // https://stackoverflow.com/questions/35825787/169-padding-bottom-trick-not-working-as-expected-in-firefox
    &:before
      display: block
      content: ''
      padding-bottom: 55.7%

    & > *
      bottom: 0
      left: 0
      padding-bottom: 0
      position: absolute
      right: 0
      top: 0

    .video-player
      &__video-container
        height: 100%

